--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "rxjs": "^6.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
