--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettysize": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-blockies": "^1.4.0",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0",
