--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@erebos/swarm-browser": "^0.5.3",
     "bootstrap": "^4.1.3",
     "hash-sum": "^1.0.2",
+    "jsonpack": "^1.1.5",
+    "lz-string": "^1.4.4",
     "prettysize": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
