--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-blockies": "^1.4.0",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "react-scroll": "^1.7.10",
     "reactstrap": "^6.5.0",
     "rxjs": "^6.3.3"
   },
