--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@erebos/api-pss": "^0.5.3",
     "@erebos/swarm-browser": "^0.5.3",
     "bootstrap": "^4.1.3",
+    "file-saver": "^2.0.0",
     "hash-sum": "^1.0.2",
     "jsonpack": "^1.1.5",
     "lz-string": "^1.4.4",
