--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.6.3",
     "react-helmet-async": "^0.2.0",
     "react-hot-loader": "^4.6.3",
+    "react-jobs": "^1.0.1",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -24,6 +25,7 @@
     "react-scroll": "^1.7.10",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "rxjs": "^6.3.3"
   },
   "scripts": {
