--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@erebos/api-pss": "^0.5.3",
-    "@erebos/swarm-browser": "^0.5.3",
-    "bootstrap": "^4.1.3",
-    "file-saver": "^2.0.0",
-    "hash-sum": "^1.0.2",
-    "jsonpack": "^1.1.5",
-    "lz-string": "^1.4.4",
-    "prettysize": "^2.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-blockies": "^1.4.0",
-    "react-dom": "^16.6.3",
-    "react-helmet-async": "^0.2.0",
-    "react-hot-loader": "^4.6.3",
-    "react-jobs": "^1.0.1",
-    "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "@erebos/api-pss": "0.5.3",
+    "@erebos/swarm-browser": "0.5.3",
+    "bootstrap": "4.1.3",
+    "file-saver": "2.0.0",
+    "hash-sum": "1.0.2",
+    "jsonpack": "1.1.5",
+    "lz-string": "1.4.4",
+    "prettysize": "2.0.0",
+    "prop-types": "15.6.2",
+    "react": "16.6.3",
+    "react-blockies": "1.4.0",
+    "react-dom": "16.6.3",
+    "react-helmet-async": "0.2.0",
+    "react-hot-loader": "4.6.3",
+    "react-jobs": "1.0.1",
+    "react-redux": "6.0.0",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.1",
-    "react-scroll": "^1.7.10",
-    "reactstrap": "^6.5.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "rxjs": "^6.3.3"
+    "react-scroll": "1.7.10",
+    "reactstrap": "6.5.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "rxjs": "6.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
