--- a/package.json
+++ b/package.json
@@ -28,19 +28,33 @@
     "redux-thunk": "2.3.0",
     "rxjs": "6.3.3"
   },
+  "devDependencies": {
+    "babel-eslint": "10.0.1",
+    "eslint": "5.15.2",
+    "eslint-config-react-app": "3.0.8",
+    "eslint-plugin-flowtype": "3.4.2",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "1.5.1",
+    "hasky": "3.0.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .jsx,.js --max-warnings 0 src"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  }
 }
