--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nebula",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@erebos/api-pss": "0.5.3",
     "@erebos/swarm-browser": "0.5.3",
@@ -29,13 +30,7 @@
     "rxjs": "6.3.3"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.15.2",
-    "eslint-config-react-app": "3.0.8",
-    "eslint-plugin-flowtype": "3.4.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint": "5.12.0",
     "eslint-plugin-react-hooks": "1.5.1",
     "hasky": "3.0.2",
     "release-it": "10.3.1"
