updates release config

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "beforeStart": "yarn run lint"
+    "beforeStart": "npm run lint"
   },
   "git": {
     "requireUpstream": true,
