--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-blockies": "1.4.0",
+    "react-copy-to-clipboard": "5.0.1",
     "react-dom": "16.6.3",
     "react-helmet-async": "0.2.0",
     "react-hot-loader": "4.6.3",
