--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@erebos/api-pss": "0.5.3",
     "@erebos/swarm-browser": "0.5.3",
+    "@mainframe/rpc-stream": "0.3.0",
     "bootstrap": "4.3.1",
     "file-saver": "2.0.0",
     "hash-sum": "1.0.2",
@@ -28,7 +29,7 @@
     "reactstrap": "6.5.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "rxjs": "6.3.3"
+    "rxjs": "6.4.0"
   },
   "devDependencies": {
     "eslint": "5.12.0",
