--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@erebos/api-pss": "0.5.3",
     "@erebos/swarm-browser": "0.5.3",
     "@mainframe/rpc-stream": "0.3.0",
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
+    "@material-ui/styles": "3.0.0-alpha.10",
     "bootstrap": "4.3.1",
     "file-saver": "2.0.0",
     "hash-sum": "1.0.2",
