--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "@erebos/api-pss": "0.5.3",
     "@erebos/swarm-browser": "0.5.3",
     "@mainframe/rpc-stream": "0.3.0",
-    "@material-ui/core": "3.9.3",
-    "@material-ui/icons": "3.0.2",
-    "@material-ui/styles": "3.0.0-alpha.10",
+    "@material-ui/core": "4.2.0",
+    "@material-ui/icons": "4.2.1",
+    "@material-ui/styles": "4.2.0",
+    "connected-react-router": "6.5.0",
     "file-saver": "2.0.0",
     "hash-sum": "1.0.2",
     "jsonpack": "1.1.5",
     "lz-string": "1.4.4",
     "prettysize": "2.0.0",
     "prop-types": "15.6.2",
-    "react": "16.6.3",
+    "react": "16.8.6",
     "react-blockies": "1.4.0",
     "react-copy-to-clipboard": "5.0.1",
-    "react-dom": "16.6.3",
+    "react-dom": "16.8.6",
     "react-helmet-async": "0.2.0",
     "react-hot-loader": "4.6.3",
     "react-jobs": "1.0.1",
