--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@material-ui/core": "4.2.0",
     "@material-ui/icons": "4.2.1",
     "@material-ui/styles": "4.2.0",
+    "axios": "0.19.0",
     "connected-react-router": "6.5.2",
+    "dotenv": "8.2.0",
     "file-saver": "2.0.0",
     "hash-sum": "1.0.2",
     "jsonpack": "1.1.5",
