--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "0.19.0",
     "connected-react-router": "6.5.2",
     "dotenv": "8.2.0",
+    "emoji-mart": "2.11.1",
     "file-saver": "2.0.0",
     "hash-sum": "1.0.2",
     "jsonpack": "1.1.5",
@@ -23,6 +24,7 @@
     "react-blockies": "1.4.0",
     "react-copy-to-clipboard": "5.0.1",
     "react-dom": "16.8.6",
+    "react-emoji-render": "1.0.0",
     "react-helmet-async": "0.2.0",
     "react-hot-loader": "4.6.3",
     "react-jobs": "1.0.1",
