--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "eslint": "5.12.0",
     "eslint-plugin-react-hooks": "1.5.1",
-    "hasky": "3.0.2",
+    "husky": "3.1.0",
     "release-it": "10.3.1"
   },
   "scripts": {
